# market-analysis-bot

./: .env.example  .gitignore  README.md  pyproject.toml  server.py
examples/: __init__.py  create_bearer_token.py
guides/: north-agent-best-practices.md  sample-agent-instructions.md
openspec/: project.md
openspec/changes/add-eia-data-tool/: design.md  proposal.md  tasks.md
openspec/changes/add-eia-data-tool/specs/eia-tool/: spec.md
openspec/changes/add-mcp-server/: design.md  proposal.md  tasks.md
openspec/changes/add-mcp-server/specs/mcp-server/: spec.md
openspec/changes/add-north-agent-config/: design.md  proposal.md  tasks.md
openspec/changes/add-north-agent-config/specs/north-agent/: spec.md
specs/: eia-data.md
sprints/: backlog.md  bug_swatting.md  sprintplan.md  tech_debt.md
sprints/sprint_1/: SPRINT_SUMMARY.md  VALIDATION_RESULTS.md  sprint_1_tasks.md  sprint_1_updates.md  sprint_1_validation.md
sprints/sprint_2/: SPRINT_SUMMARY.md  sprint_2_tasks.md  sprint_2_updates.md
sprints/sprint_3/: SPRINT_SUMMARY.md  sprint_3_tasks.md  sprint_3_updates.md
tests/: __init__.py  test_analysis_tools.py  test_eia_client.py  test_eia_tool.py  test_hello_world.py  test_trading_vernacular.py
tools/: __init__.py  analysis_tools.py  eia_data_extractor.py  hello_world.py  trading_vernacular.py
utils/: __init__.py  auth.py  eia_client.py  logging.py
